--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>My App</title>
+    
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta name="description" content="Portal Resmi IMN Business Group" />
+    <meta name="theme-color" content="#2563EB" /> 
+
+    <title>IMN Business Group</title>
   </head>
   <body>
     <div id="root"></div>
